tera/src/snapshot_tests/snapshots/tera__snapshot_tests__rendering__rendering_components_errors@missing_arg.txt.snap
---
source: tera/src/snapshot_tests/rendering.rs
expression: "&err"
input_file: tera/src/snapshot_tests/rendering_inputs/errors/components/missing_arg.txt
---
error: Argument `name` (type: `string`) missing.
 --> tpl:1:4
  |
1 | {{ <display_name/> }}
  |    ^^^^^^^^^^^^^^^
